--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=MTG-Mox
+spring.h2.console.enabled=true
+spring.datasource.generate-unique-name=false
+spring.datasource.name=MTG
+spring.jpa.show-sql=true
