--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,15 @@ spring.h2.console.enabled=true
 spring.datasource.generate-unique-name=false
 spring.datasource.name=MTG
 spring.jpa.show-sql=true
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=Daviddeltoro1999@gmail.com
+spring.mail.password=fdjb zfxm oelf vlsc
+
+# Additional SMTP properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.debug=true
