serve react statically

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.h2.console.enabled=true
 spring.datasource.generate-unique-name=false
 spring.datasource.name=MTG
 spring.jpa.show-sql=true
-
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
