--- a/pom.xml
+++ b/pom.xml
@@ -96,10 +96,6 @@
 
 	<build>
 		<plugins>
-                     <plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
 
 			<plugin>
 				<groupId>com.github.eirslett</groupId>
@@ -165,7 +161,7 @@
 							<outputDirectory>target/classes/static</outputDirectory>
 							<resources>
 								<resource>
-									<directory>src/main/frontend/build</directory>
+									<directory>src/main/frontend/dist</directory>
 									<filtering>true</filtering>
 								</resource>
 							</resources>
