Fixed: jpa unable to create table for magic card

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.name=MTG
 spring.jpa.show-sql=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
+spring.jpa.hibernate.ddl-auto=update
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=Daviddeltoro1999@gmail.com
