Add annotation to handle null json field values

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.show-sql=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jackson.default-property-inclusion=non_null
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
