--- a/src/main/frontend/.prettierrc
+++ b/src/main/frontend/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "tabWidth": 1,
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "trailingComma": "all",
+  "printWidth": 80,
+  "jsxSingleQuote": false
 }
-
