--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.6",
     "react": "^19.0.0",
+    "react-auth-kit": "^4.0.2-alpha.11",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.6"
   },
