Add fetching for commander

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-spring.application.name=MTG-Mox
-spring.h2.console.enabled=true
-spring.datasource.generate-unique-name=false
-spring.datasource.name=MTG
-spring.jpa.show-sql=true
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/mtg_mox
+spring.datasource.username=ddt
+spring.datasource.password=yourpassword
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.show-sql=true
 spring.jackson.default-property-inclusion=non_null
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
